@@ -1,1 +1,1 @@
-usr/lib/python*/*-packages/cairo/_cairo_d.so
+usr/lib/python2*/*-packages/cairo/_cairo_d.so
