@@ -1,2 +1,2 @@
-usr/share/javascript/jquery/jquery.js usr/share/doc/python-cairo-dev/html/_static/jquery.js
-usr/share/javascript/underscore/underscore.js usr/share/doc/python-cairo-dev/html/_static/underscore.js
+usr/share/javascript/jquery/jquery.js usr/share/doc/python3-cairo-dev/html/_static/jquery.js
+usr/share/javascript/underscore/underscore.js usr/share/doc/python3-cairo-dev/html/_static/underscore.js
