@@ -1,3 +1,3 @@
-usr/lib/python*/*-packages/cairo/*.py
-usr/lib/python*/*-packages/cairo/_cairo.so
-usr/lib/python*/*-packages/pycairo-*.egg-info
+usr/lib/python2*/*-packages/cairo/*.py
+usr/lib/python2*/*-packages/cairo/_cairo.so
+usr/lib/python2*/*-packages/pycairo-*.egg-info
