@@ -1,0 +1,1 @@
+usr/lib/python3*/*-packages/cairo/_cairo.cpython-*dm-*.so
