@@ -1,0 +1,2 @@
+usr/include/pycairo/py3cairo.h
+usr/share/pkgconfig/py3cairo.pc usr/lib/pkgconfig/
