@@ -1,0 +1,9 @@
+Document: python3-cairo
+Title: Pycairo documentation
+Author: Steven Chaplin
+Abstract: Manual for Pycairo
+Section: Graphics
+
+Format: HTML
+Index: /usr/share/doc/python3-cairo-doc/html/index.html
+Files: /usr/share/doc/python3-cairo-doc/html/*.html /usr/share/doc/python3-cairo-doc/html/reference/*.html
