@@ -1,0 +1,2 @@
+usr/share/javascript/jquery/jquery.js usr/share/doc/python3-cairo-doc/html/_static/jquery.js
+usr/share/javascript/underscore/underscore.js usr/share/doc/python3-cairo-doc/html/_static/underscore.js
