@@ -2,8 +2,9 @@ pycairo (1.15.4-2) UNRELEASED; urgency=medium
 
   * debian/python-cairo-dev.examples: Install examples file in
     python-cairo-dev package instead of python-cairo
+  * Build python3 packages, split the documentation in a separate -doc pkg
 
- -- Laurent Bigonville <bigon@debian.org>  Sun, 19 Nov 2017 13:42:23 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Sun, 19 Nov 2017 13:44:14 +0100
 
 pycairo (1.15.4-1) unstable; urgency=medium
 
